# SFTwx

./: .gitignore  CMakeLists.txt  README.md
include/: CountingDirTraverser.hpp  MainFrame.hpp  SubdirListTraverser.hpp
src/: MainFrame.cpp  main.cpp
